# stake-watch

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  claude.md  docker-compose.yml  pyproject.toml
config/: seed.yaml
docs/api/: README.md  endpoints.md
docs/code-style/: formatting.md  linting.md  naming.md
docs/git/: branches.md  commits.md  workflow.md
docs/ops/: deploy.md
docs/review/: checklist.md  process.md
docs/testing/: tdd.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx
src/stake_watch/: config.py  main.py
tests/: test_config.py  test_main.py
tests/alerts/: test_formatter.py  test_protocols_report.py  test_screenshot.py  test_stablecoin_report.py  test_telegram.py
tests/api/: test_alerts_route.py  test_comparison_route.py  test_config_routes.py  test_new_routes.py  test_protocol_risk_cache.py  test_protocol_routes.py  test_stablecoin_report_routes.py  test_stablecoins_route.py  test_telegram_routes.py
tests/collectors/: test_base.py  test_defillama.py  test_refreshers.py  test_registry.py
tests/models/: test_alert.py  test_position.py  test_protocol.py  test_stablecoin.py
tests/risk/: test_engine.py  test_integration.py  test_morpho_rules_extended.py  test_onchain_signals.py  test_protocol_risk_monitor.py  test_protocol_status.py  test_risk_model.py  test_rules.py  test_stablecoin_integration.py  test_stablecoin_rules.py  test_stablecoin_scorer.py
tests/scheduler/: test_runner.py  test_scheduler_integration.py
tests/storage/: test_alerts.py  test_config_store.py  (+3 more)
(+132 files in other folders)
