[project]
name = "stake-watch"
version = "0.1.0"
description = "Cross-chain DeFi yield monitoring and risk alerting"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.137.0",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "playwright>=1.50.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "pyyaml>=6.0.3",
    "solana>=0.36.12",
    "solders>=0.27.1",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "web3>=7.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stake_watch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
